8296412: Special case infinite loops with unmerged backedges in IdealLoopTree::check_safepts

Backport-of: da38d43fcc640ea9852db6c7c23817dcef7080d5